licenses(["unencumbered"])  # Public Domain or MIT

exports_files(["LICENSE"])

cc_library(
    name = "jsoncpp",
    srcs = [
        "src/lib_json/json_reader.cpp",
        "src/lib_json/json_tool.h",
        "src/lib_json/json_value.cpp",
        "src/lib_json/json_writer.cpp",
    ],
    hdrs = [
        "include/json/allocator.h",
        "include/json/assertions.h",
        "include/json/config.h",
        "include/json/json_features.h",
        "include/json/forwards.h",
        "include/json/json.h",
        "include/json/reader.h",
        "include/json/value.h",
        "include/json/version.h",
        "include/json/writer.h",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":private"],
)

cc_library(
    name = "private",
    textual_hdrs = ["src/lib_json/json_valueiterator.inl"],
)

cc_binary(
    name = "jsontestrunner",
    srcs = ["src/jsontestrunner/main.cpp"],
    includes = ["include"],
    deps = [":jsoncpp"],
)

cc_binary(
    name = "jsoncpp_test",
    srcs = [
        "src/test_lib_json/jsontest.cpp",
        "src/test_lib_json/jsontest.h",
        "src/test_lib_json/main.cpp",
        "src/test_lib_json/fuzz.h",
        "src/test_lib_json/fuzz.cpp",
        ],
    deps = [":jsoncpp"],
)
