load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "readFromStream_ok",
    srcs = ["readFromStream/readFromStream.cpp"],
    args = ["$(location :readFromStream/withComment.json)"],
    data = ["readFromStream/withComment.json"],
    deps = ["//:jsoncpp"],
)

cc_binary(
    name = "readFromStream_err",
    srcs = ["readFromStream/readFromStream.cpp"],
    args = ["$(location :readFromStream/errorFormat.json)"],
    data = ["readFromStream/errorFormat.json"],
    deps = ["//:jsoncpp"],
)

cc_binary(
    name = "readFromString",
    srcs = ["readFromString/readFromString.cpp"],
    deps = ["//:jsoncpp"],
)

cc_binary(
    name = "streamWrite",
    srcs = ["streamWrite/streamWrite.cpp"],
    deps = ["//:jsoncpp"],
)

cc_binary(
    name = "stringWrite",
    srcs = ["stringWrite/stringWrite.cpp"],
    deps = ["//:jsoncpp"],
)
